--- a/templates/index.html
+++ b/templates/index.html
@@ -221,7 +221,7 @@
                         <li>• Instantly generate custom-branded flyers</li>
                         <li>• QR code sign templates</li>
                         <li>• Social stories announcing the open house</li>
-                        <li>• Button: “Download & Print All”</li>
+                        <li>• • Button: “Download & Print All”</li>
                     </ul>
                     <a href="/open_house_tools" class="mt-4 bg-gray-700 hover:bg-gray-600 text-white font-semibold py-2 px-4 rounded-lg inline-block">
                         Create Open House Kit
@@ -266,6 +266,7 @@
                         View Insights
                     </a>
                 </div>
+                <!-- Re-adding Team Mode section -->
                 <div class="glass-pane p-6">
                     <h4 class="text-xl font-bold text-white mb-3">10. Team Mode (Optional Upgrade)</h4>
                     <ul class="text-slate-300 text-left space-y-2">
